# arcadeforge

./: .env.cloud.example  .env.example  .estado.md  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  fly.workers.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  vercel.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  doc-writer.md  security-auditor.md  team-coordinator.md
.claude/hooks/: post-tool-use.sh  pre-tool-use.sh  session-start.sh  stop.sh
.github/workflows/: ci-web.yml  deploy.yml  (+2 more)
apps/api/: .dockerignore  .estado.md  Dockerfile.cloud  alembic.ini  fly.toml  pyproject.toml
apps/api/app/: config.py  main.py  storage.py
apps/api/app/auth/: dependencies.py  encryption.py  passwords.py  rate_limit.py  reset_password.py  router.py  schemas.py  sessions.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: c3a7f8b2d1e4_add_llm_settings.py  e2d1c094f81e_add_game_status_and_status_message.py  f87f692515ca_initial_schema.py
apps/api/app/games/: arcade_router.py  generator.py  genres.py  html_generator.py  llm_client.py  play_schemas.py  reaper.py  router.py  sandbox.py  sandbox_fly.py  scanner.py  schemas.py  validation_schemas.py
apps/api/app/jobs/: queue.py
apps/api/app/pages/: router.py
apps/api/tests/: conftest.py  test_arcade.py  test_auth_flow.py  test_auth_passwords.py  test_games.py  test_generator.py  test_password_reset.py  test_play_sessions.py  test_profile.py  test_scanner.py  test_sharing.py  test_validation.py  test_versions.py
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: backup-db.sh  dev.sh  seed_games.py
skills/: assemble-team.md  fix-issue.md  generate-docs.md  pre-commit.md  refactor-module.md  review-pr.md  tdd-loop.md
workers/: .dockerignore  Dockerfile.cloud  fly.toml  shared_settings.py
(+32 files in other folders)
