[project]
name = "arcadeforge-api"
version = "0.1.0"
description = "ArcadeForge backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.20",
    "pydantic[email]>=2.11.0",
    "docker>=7.0.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "anthropic>=0.45.0",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.35.0",
]
cloud = [
    "boto3>=1.35.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no DB or external services required)",
    "integration: Integration tests (requires Postgres + Redis)",
    "e2e: End-to-end browser tests (requires Playwright)",
]
